# Algorithm-Visualizer

./: CMakeLists.txt  README.md  main.cpp
assets/: README.md
include/: Bar.hpp  BubbleSort.hpp  Config.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp  SelectionSort.hpp  Statistics.hpp  Utils.hpp  Visualizer.hpp
src/: Bar.cpp  BubbleSort.cpp  Config.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp  Statistics.cpp  Utils.cpp  Visualizer.cpp  main.cpp
